# prof_of_concept_easy

./: Cargo.toml  README.md
src/: main.rs
test_bin/: rtic_full_example  rtic_simple_resourse
